# abuse_whois

./: .lefthookrc  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  gunicorn.conf.py  lefthook.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
abuse_whois/: __init__.py  cli.py  dataclasses.py  errors.py  ip.py  main.py  settings.py  utils.py  whois.py
abuse_whois/api/: app.py  settings.py
abuse_whois/api/endpoints/: index.py  whois.py
abuse_whois/matchers/shared_hosting/: __init__.py  rule.py  rules.py
abuse_whois/matchers/shared_hosting/rules/: 000webhost.yaml  adobe.yaml  backblaze.yaml  bitly.yaml  blogger.yaml  changeip.yaml  cloudflare.yaml  firebase.yaml  glitch.yaml  godaddy.yaml  google_cloud.yaml  google_site.yaml  jimdo.yaml  micorosoft.yaml  netlify.yaml  noip.yaml  notion.yaml  replit.yaml  softlayer.yaml  square.yaml  telegram.yaml  weebly.yaml  wordpress.yaml  yola.yaml
abuse_whois/matchers/whois/: __init__.py  rule.py  rules.py
abuse_whois/matchers/whois/rules/: alibaba_cloud.yaml  cloudflare.yaml  digitalocean.yaml  dynabot.yaml  dynadot.yaml  fran_tech.yaml  gname.yaml  godaddy.yaml  hostinger.yaml  name.yaml  namecheap.yaml  namesilo.yaml  noip.yaml  orange.yaml  publicdomainregistry.yaml  registrareu.yaml  tucows.yaml
abuse_whois/pysigma/: README.md  exceptions.py  parser.py  sigma_scan.py  utils.py  validator.py
abuse_whois/pysigma/factories/: __init__.py  detection.py  rule.py
abuse_whois/pysigma/schemas/: __init__.py  alert.py  base_model.py  detection.py  rule.py
abuse_whois/schemas/: __init__.py  api_model.py  contact.py  query.py  rule.py  whois.py
abuse_whois/services/: __init__.py  contacts.py  whois.py
rules/: namesilo.yaml
tests/: terst_version.py  test_abuse_whois.py  test_ip.py  test_main.py  test_schemas.py  test_utils.py  test_whois.py
tests/fixtures/: godaddy.com.json
tests/matchers/: test_shared_hosting.py  test_whois.py
tests/matchers/shared_hosting/: test_rule.py  test_rules.py  test_shared_hosting.py
tests/matchers/whois/: test_rule.py  test_rules.py  test_whois.py
tests/services/: test_whois.py
