[tool.poetry]
name = "abuse_whois"
version = "0.0.0"
description = "Find where to report a domain for abuse"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ninoseki/abuse_whois"
repository = "https://github.com/ninoseki/abuse_whois"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiometer = "^0.5"
asyncache = "^0.3"
asyncer = "^0.0.7"
asyncwhois = "^1.1"
azuma = "^0.4.1"
cachetools = "^5.3"
fastapi = { extras = ["all"], version = "^0.111", optional = true }
gunicorn = { version = "^22.0", optional = true }
loguru = "^0.7"
orjson = "^3.10"
pydantic = "^2.7"
PyYAML = "^6.0"
returns = "^0.23"
stamina = "^24.2"
tld = "^0.13"
validators = "^0.28"

[tool.poetry.group.dev.dependencies]
coveralls = "^4.0.1"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-pretty = "^1.2"
pytest-randomly = "^3.15"
pyupgrade = "^3.16.0"

[tool.poetry.extras]
api = ["fastapi", "gunicorn"]

[tool.poetry.scripts]
abuse_whois = "abuse_whois.main:app"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C",     # flake8-comprehensions
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "SIM",   # flake8-simplify
  "T20",   # flake8-print
  "W",     # pycodestyle warnings
]
ignore = [
  "E501", # line too long, handled by black
]

[tool.mypy]
plugins = ["pydantic.mypy"]
